--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#/">Angular Todo</a>
+                <a class="navbar-brand" href="/">Angular Todo</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/">Home</a></li>
-                <li><a href="#/todo">Todo</a></li>
-                <li><a href="#/accounts/register">Account</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/todo">Todo</a></li>
+                <li><a href="/accounts/register">Account</a></li>
             </ul>
         </div>
     </nav>
